# fastp

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  Makefile
local_benchmarks/: .gitignore  CMakeLists.txt  README.md  adapter_benchmark.cpp  evaluator_benchmark.cpp
local_benchmarks/include/: bench_seed.hpp  benchmark_data.hpp  benchmark_utils.hpp  fragment_config.hpp
local_tests/: .gitignore  Makefile  evaluator_access.hpp  evaluator_tests.cpp
local_tests/stubs/: adapter_reads.h  fastqreader.cpp  fastqreader.h  read.h  scoped_fastq.hpp
scripts/: build_with_sanitizer.sh  compare_benchmarks.py
src/: adaptertrimmer.cpp  adaptertrimmer.h  ahocorasick.h  basecorrector.cpp  duplicate.cpp  duplicate.h  evaluator.cpp  evaluator.h  fastqreader.cpp  fastqreader.h  filter.cpp  filterresult.cpp  htmlreporter.cpp  knownadapters.cpp  knownadapters.h  matcher.cpp  matcher.h  options.h  overlapanalysis.cpp  overlapanalysis.h  peprocessor.cpp  peprocessor.h  polyx.cpp  prime_table.h  read.cpp  read.h  readpool.cpp  readpool.h  seprocessor.cpp  seprocessor.h  sequence.cpp  sequence.h  spsc_ring_buffer.h  stats.cpp  stats.h  threadconfig.h  umiprocessor.cpp  unittest.cpp  util.h  writerthread.cpp  (+1 more)
src/base/: compiler_hints.hpp  string_ref.hpp
src/simd/: bit.h  hamming.h  hamming_dispatch.cpp
